--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "postinstall": "npm i nodemon --force",
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,7 +14,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.15",
     "whatsapp-web.js": "^1.15.1"
   }
 }
