--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "whatsapp-web.js": "^1.15.1"
+    "whatsapp-web.js": "github:tuyuribr/whatsapp-web.js#patch-9"
   }
 }
