--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "whatsapp-single",
-  "type": "module",
+  "type": "commonjs",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -14,6 +14,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "request": "^2.88.2",
+    "valid-url": "^1.0.9",
     "whatsapp-web.js": "github:tuyuribr/whatsapp-web.js#patch-9"
   }
 }
