--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "request": "^2.88.2",
     "valid-url": "^1.0.9",
-    "whatsapp-web.js": "github:tuyuribr/whatsapp-web.js#patch-9"
+    "whatsapp-web.js": "^1.15.3"
   }
 }
